default/objects/Quote_Terms__mdt/Quote_Terms__mdt.object-meta.xml
<CustomObject>
    <label>Quote Terms</label>
    <pluralLabel>Quote Terms</pluralLabel>
</CustomObject>