default/objects/Quote_Terms__mdt/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <label>Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TT Payment</fullName>
                <default>true</default>
                <label>TT Payment</label>
            </value>
            <value>
                <fullName>LC Payment</fullName>
            </value>
            <value>
                <fullName>TT or LC Payment</fullName>
            </value>
            <value>
                <fullName>CAD basis payment</fullName>
            </value>
            <value>
                <fullName>Security Deposit against LC payment</fullName>
            </value>
            <value>
                <fullName>SWIFT Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>