default/objects/Quote_Terms__mdt/fields/Sales_Region_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Type__c</fullName>
    <label>Sales Region Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>