default/objects/Quote_Terms__mdt/fields/SalesRegion__c.field-meta.xml
<CustomField>
    <fullName>SalesRegion__c</fullName>
    <label>Sales Region</label>
    <length>200</length>
    <type>Text</type>
</CustomField>