default/objects/Quote_Terms__mdt/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <label>Terms &amp; Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>