default/objects/Quote_Terms__mdt/fields/Terms_Conditions_Name__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions_Name__c</fullName>
    <label>Terms &amp; Conditions Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>